Updates as of 15-NOV-2019

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="comparison.html">Comparison</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Data</a>
+            <a class="nav-link" href="data.html">Data</a>
           </li>    
         </ul>
       </div>
@@ -61,7 +61,7 @@
                 </div>
               </div>
             <p class="card-text">
-                <img src ="assets/images/Fig1.png" height =200px width=200px alt ='Fig1'>
+                <img src ="assets/images/Fig1.png" height =200px width=200px alt ='Temprature'>
             </p>
             <p>
               The purpose of this project was to analyze how weather changes as you get closer to the equator. 
