Updates as of 16-NOV-2019 12:30 am

--- a/WebVisualizations/comparison.html
+++ b/WebVisualizations/comparison.html
@@ -65,14 +65,18 @@
                     <div class='col-sm-6'>
                       <h5 class='text-center'>   vs. Max Temprature </h5>
                         <div class='text-center'>
+                          <a href="temprature.html">
                             <img src="assets/images/Fig1.png" height= 220px width =320px alt="Temprture">
+                            </a>
                         </div>
                     </div>           
                                 
                     <div class='col-sm-6'>
                       <h5 class='text-center'>   vs. Humidity</h5>
                         <div class='text-center'>
+                          <a href="humidity.html">
                             <img src="assets/images/Fig2.png" height= 220px width =320px alt="Humidity">
+                            </a>
                         </div>
                     </div>
 
@@ -81,13 +85,17 @@
                     <div class="col-sm-6">
                       <h5 class='text-center'>   vs. Cloudiness</h5>
                         <div class='text-center'>
+                          <a href="cloudiness.html">
                             <img src="assets/images/Fig3.png" height= 220px width = 320px alt="Cloudiness">
+                            </a>
                         </div>
                     </div>
                     <div class="col-sm-6">
                       <h5 class='text-center'>   vs. Wind Speed</h5>
                         <div class='text-center'>
+                          <a href="windspeed.html">
                                 <img src="assets/images/Fig4.png" height= 220px width = 320px alt="Wind Speed">
+                          </a>
                         </div>
                     </div>
             </div>
