--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -50,8 +50,8 @@
   <div class="containter">
     <h1>Data</h1>
     <h2></h2>
-    <h3></h3>
-    <h4>The following table includes all fo the data used for plotting during this project.</h2>
+    <h3><Data/h3>
+    <h4>The following table includes all of the data used for plotting during this project.</h2>
   </div>
 <div class="table-responsive">
 <table class="table table-striped table-bordered">
