--- a/WebVisualizations/temprature.html
+++ b/WebVisualizations/temprature.html
@@ -51,7 +51,7 @@
     <!---Landing Page-->
     <div class = "container">
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-md-6">
         <div class="card">
           <div class="card-body">
             <h3 class="card-title font-weight-bold">Max Temprature</h3>
@@ -61,7 +61,7 @@
                 </div>
               </div>
             <p class="card-text">
-                <img src ="assets/images/Fig1.png" height =320px width=480px alt ='Fig1'>
+                <img src ="assets/images/Fig1.png" height =300px width=400px alt ='Temprature'>
                 
             </p>
             <p>
@@ -72,7 +72,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-6">
         <div class="card">
           <div class="card-body">
             <h3 class="card-title font-weight-bold">Visualizations</h3>
@@ -84,7 +84,7 @@
             <div class="row">
               <div class="col-sm-6">
                     <img src="assets/images/Fig1.png"  height = 200px width = 200px alt='Temprature'
-                    style="border:2px solid green">
+                    style="border:1px solid green">
               </div>
               <div class="col-sm-6">
                 <p>
