--- a/WebVisualizations/cloudiness.html
+++ b/WebVisualizations/cloudiness.html
@@ -51,7 +51,7 @@
     <!---Landing Page-->
     <div class = "container">
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-md-6">
         <div class="card">
           <div class="card-body">
             <h3 class="card-title font-weight-bold">Cloudiness</h3>
@@ -61,7 +61,7 @@
                 </div>
               </div>
             <p class="card-text">
-                <img src ="assets/images/Fig3.png" height =320px width=480px alt ='Humidity'>
+                <img src ="assets/images/Fig3.png" height =300px width=400px alt ='Cloudiness'>
                 
             </p>
             <p>
@@ -71,7 +71,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-6">
         <div class="card">
           <div class="card-body">
             <h3 class="card-title font-weight-bold">Visualizations</h3>
@@ -82,24 +82,24 @@
             </div>
             <div class="row">
               <div class="col-sm-6">
-                    <img src="assets/images/Fig1.png"  height = 200px width = 200px alt='Fig1'>
+                    <img src="assets/images/Fig1.png"  height = 200px width = 200px alt='Temprature'>
               </div>
               <div class="col-sm-6">
                 <p>
-                    <img src="assets/images/Fig2.png" height = 200px width = 200x alt='Fig2'>
+                    <img src="assets/images/Fig2.png" height = 200px width = 200x alt='Humidity'>
                 </p>
               </div>
             </div>
             <div class="row">
               <div class="col-sm-6">
                 <p>
-                    <img src="assets/images/Fig3.png" height = 200px width = 200px alt='Fig3'
-                    style="border:2px solid green">
+                    <img src="assets/images/Fig3.png" height = 200px width = 200px alt='Cloudiness'
+                    style="border:1px solid green">
                 </p>
               </div>
               <div class="col-sm-6">
                 <p>
-                    <img src="assets/images/Fig4.png" height = 200px width = 200px alt='Fig4'>
+                    <img src="assets/images/Fig4.png" height = 200px width = 200px alt='Wind Speed'>
                 </p>
               </div>
             </div>
