Final updates prior to submission

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -10,7 +10,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   
+    <link rel="stylesheet" href="style.css">
     <title>Web Design Project</title>
   </head>
   <body>
@@ -85,26 +85,29 @@
             </div>
             <div class="row">
               <div class="col-sm-6">
-                <p>
+                <a href="temprature.html">
+
                   <img src="assets/images/Fig1.png" height = 200px width = 200px alt='Temprature'>
-                </p>
+                </a>
               </div>
               <div class="col-sm-6">
-                <p>
+                <a href="humidity.html">
                     <img src="assets/images/Fig2.png" height = 200px width = 200x alt='Humidity'>
-                </p>
+                </a>
               </div>
             </div>
             <div class="row">
               <div class="col-sm-6">
-                <p>
+                <a href="cloudiness.html">
+
                     <img src="assets/images/Fig3.png" height = 200px width = 200px alt='Cloudiness'>
-                </p>
+                </a>
               </div>
               <div class="col-sm-6">
-                <p>
+                <a href="windspeed.html">
+                  
                     <img src="assets/images/Fig4.png" height = 200px width = 200px alt='Wind Speed'>
-                </p>
+                </a>
               </div>
             </div>
           </div>
