--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -1,6 +1,6 @@
 <!-- Web Design Homework -->
 <!-- Submitted by Farshad Esnaashari-->
-<!-- Main (index) html file-->
+<!-- Main Data html file-->
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,10 +10,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   
+    <link rel="stylesheet" href="style.css">
+    
     <title>Web Design Project</title>
   </head>
   <body>
+
   <!--Navbar-->
   <div class="container">
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
@@ -31,10 +33,10 @@
                   Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="temprature.html">Max Temprature</a>
-                  <a class="dropdown-item" href="humidity.html">Humidity</a>
-                  <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-                  <a class="dropdown-item" href="windspeed.html">Wind Speed</a>
+                    <a class="dropdown-item" href="temprature.html">Max Temprature</a>
+                    <a class="dropdown-item" href="humidity.html">Humidity</a>
+                    <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+                    <a class="dropdown-item" href="windspeed.html">Wind Speed</a>
                 </div>
               </li>
           <li class="nav-item">
@@ -47,7 +49,8 @@
       </div>
     </nav>
   </div>
-  <div class="containter">
+
+  <div class="containter container-padding">
     <h1>Data</h1>
     <h2></h2>
     <h3><Data/h3>
