--- a/WebVisualizations/windspeed.html
+++ b/WebVisualizations/windspeed.html
@@ -1,6 +1,6 @@
 <!-- Web Design Homework -->
 <!-- Submitted by Farshad Esnaashari-->
-<!-- Main (index) html file-->
+<!-- Windspeed html file-->
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,7 +10,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   
+    <link rel="stylesheet" href="style.css">
     <title>Web Design Project</title>
   </head>
   <body>
