Final updates prior to the submission

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -49,15 +49,14 @@
   </div>
 
     <!---Landing Page-->
-    <div class = "container">
+    <div class = "container container-padding">
     <div class="row">
       <div class="col-md-7">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title font-weight-bold">Summary: Lattitude vs. X</h3>
             <div class ="row">
                 <div class="col-sm-12">
-                  <h4>Summary: Lattitude vs. X</h4>
+                  <h3>Summary: Lattitude vs. X</h3>
                 </div>
               </div>
             <p class="card-text">
@@ -77,10 +76,9 @@
       <div class="col-md-5">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title font-weight-bold">Visualizations</h3>
             <div class ="row">
               <div class="col-sm-12">
-                <h4>Visualizations</h4>
+                <h3>Visualizations</h3>
               </div>
             </div>
             <div class="row">
