--- a/WebVisualizations/comparison.html
+++ b/WebVisualizations/comparison.html
@@ -15,7 +15,7 @@
   </head>
   <body>
   <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
     </nav>
 
     <!---Comparison Page-->
-    <div class = "container">
+    <div class = "container container-padding">
       <div class ="card">
         <div class="card-body">
           <h3 class="card-title"> Comparison: Lattitude vs. X</h3>
