--- a/WebVisualizations/humidity.html
+++ b/WebVisualizations/humidity.html
@@ -50,15 +50,14 @@
   </div>
 
     <!---Landing Page-->
-    <div class = "container">
+    <div class = "container container-padding">
     <div class="row">
       <div class="col-md-7">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title font-weight-bold">Humidity</h3>
             <div class ="row">
                 <div class="col-sm-12">
-                  <h4>Humidity</h4>
+                  <h3>Humidity</h3>
                 </div>
               </div>
             <p class="card-text">
@@ -76,10 +75,9 @@
       <div class="col-md-5">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title font-weight-bold">Visualizations</h3>
             <div class ="row">
               <div class="col-sm-12">
-                <h4>Visualizations</h4>
+                <h3>Visualizations</h3>
               </div>
             </div>
             <div class="row">
