--- a/WebVisualizations/windspeed.html
+++ b/WebVisualizations/windspeed.html
@@ -49,15 +49,14 @@
   </div>
 
     <!---Landing Page-->
-    <div class = "container">
+    <div class = "container container-padding">
     <div class="row">
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title font-weight-bold">Wind Speed</h3>
             <div class ="row">
                 <div class="col-sm-12">
-                  <h4>Wind Speed</h4>
+                  <h3>Wind Speed</h3>
                 </div>
               </div>
             <p class="card-text">
@@ -75,10 +74,9 @@
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title font-weight-bold">Visualizations</h3>
             <div class ="row">
               <div class="col-sm-12">
-                <h4>Visualizations</h4>
+                <h3>Visualizations</h3>
               </div>
             </div>
             <div class="row">
